# dopagaki-transition

./: .gitignore  ADR-CATALOG.md  GLOSSARY.md  MANUSCRIPT-v0.1.md  PROJECT-CONTEXT.md  README.md  TS-CATALOG.md  requirements-dev.txt
adr/: ADR-CATALOG.md
constitution/: C-0001-Reality-First.md  C-0002-Review-First.md  C-0003-Traceability.md  C-0004-Separation-of-Concerns.md  C-0005-Reproducibility.md  C-0006-Falsifiability.md  C-0007-Versioned-Knowledge.md  C-0008-Scope-First.md  CONSTITUTION.md
docs/adr/: ADR-CATALOG.md  ADR-TEMPLATE.md  README.md
docs/constitution/: C-0001-reality-first.md  CONSTITUTION.md
docs/ts/: README.md
manuscript/: MANUSCRIPT-v0.1.md  README.md  STRUCTURE-v0.2.md  dopagaki-syndrome-socio-neuroeconomic-perspective.md  dopagaki-transition-full-outline.md  dopagakiensis-sapiens-preliminary-observation.md  part02_ch07_03_users_customers_or_products.md
mcp/glossary-knowledge/: README.md  providers.json.example  pyproject.toml  requirements.txt
mcp/glossary-knowledge/glossary_knowledge_mcp/: __init__.py  __main__.py  models.py  providers.py  server.py
meta/: AS-IS.md  DUAL-AUDIENCE.md  META-SPECIFICATION.md  TO-BE-GLOSSARY-PIPELINE.md  TO-BE.md  glossary-adopt.json  glossary-config.json  glossary-hold.json  locale-policy.json
notes/: TODO.md  commit-0001-attention-scarcity.md
research/: README.md
research-log/: ISSUE-001-attention-capital-constraints.md  ISSUE-CLOSE-CHECKLIST.md  README.md  RL-20260621-knowledge-filter-mcp.md
scripts/: README.md  check-locale.py  glossary_extractor.py
ts/: TS-CATALOG.md
(+26 files in other folders)
